implement es alias api (#409)
* feat: add create es alias api

* feat: add IndexAliasMiddleware

* feat: add GetESAliases

* chore: go mod

* fix: support comma separated list of indices & aliases

* fix: support indices & aliases field in action

* tests: add alias_es_test.go

* chore: go mod

* chore: format code

* fix: fix deadlock

* tests: add TestGetESAliases

* tests: fix test

* fix: add matchAndAddToMap

* tests: remove data arg for TestGetESAliases

* tests: add tests for wildcard

* tests: add doc annotations

* feat: make alias top level object

* feat: store alias data in metadata storage

* fix: fix alias loading

* tests fix tests

* tests: fix tests

* tests: add test for search with alias

* tests: add test

* tests: add aliaslist_test.go

* docs: regenerate docs

* chore: add license to new files

* fix: use strings.Join

* fix: potential panic in RemoveIndexesFromAlias

* check if indexName hasa wildcard in matchAndAddToMap

* remove IndexAliasMiddleware from non-search es apis

* fix test

* remove uneeded loop tag

* improve RemoveIndexesFromAlias logic
